main section initial img and description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
         </div>
     </header>
     <main>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="backgroundImg"></div>
+
+            <div class="main-excange-container--title">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+
+            <section class="main-tables-container">
+                <div>
+
+                </div>
+            </section>
+
+        </section>
         <section></section>
         <section></section>
         <section></section>
