--- a/index.html
+++ b/index.html
@@ -27,9 +27,40 @@
             </div>
 
             <section class="main-tables-container">
-                <div>
+                <div class="main-currency-table">
+                    <p class="currency-table--title">Monedas</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table__right">$ 1.96 <span class="trending-dow"></span> </td>
+                            </tr>
+
+                            <tr>
+                                <td>Ethereum</td>
+                                <td class="table__right"> $ 0.07 <span></span></td>
+                            </tr>
+
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table__right">$ 2.15 <span></span></td>
+                            </tr>
+
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table__right">$ 4.96 <span></span></td>
+                            </tr>
+
+                        </table>
+                    </div>
+                    <div class="currency-table--date">
+                        <p>
+                          <b>Actualizado: 19 Julio 23:45</b>  
+                        </p>
+                    </div>
 
                 </div>
+               
             </section>
 
         </section>
