cards sections whit horizontal scroll css

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-            <a href="" class="header--button">Conoce Nuestros Planes <span></span> </a>
+            <a href="#plans" class="header--button">Conoce Nuestros Planes <span></span> </a>
         </div>
     </header>
     <main>
@@ -102,9 +102,91 @@
             </section>
 
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <section class="main-product-detail">
+            <span class="product-detail--batata-logo"> </span>
+            <div class="product-detail--title">
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+
+            <section class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="clock"></span>
+                    <p class="product--card-title">Tiempo Real</p>
+                    <p class="product--card-body">Nuestro API toma información minuto a 
+                        minuto sobre las tasas que más determinan el comportamiento.
+                    </p>
+                </article>
+
+                <article class="product-detail--card">
+                    <span class="eye"></span>
+                    <p class="product--card-title">No hay tasas escondidas</p>
+                    <p class="product--card-body">Ni en la compra o al momento de exit, 
+                        Batabit siempre te muestra el costo real de lo que estás adquiriendo.
+                    </p>
+                </article>
+
+                <article class="product-detail--card">
+                    <span class="price"></span>
+                    <p class="product--card-title">Compara monedas</p>
+                    <p class="product--card-body">No más rumores, con Babtabit 
+                        sabrás el valor real de cada moneda en el mercado actual.
+                    </p>
+                </article>
+
+                <article class="product-detail--card">
+                    <span class="ready"></span>
+                    <p class="product--card-title">Información confiable</p>
+                    <p class="product--card-body">Nuestras fuentes están 100% verificadas y 
+                        continuamos auditando su contenido mientras se actualizan.
+                    </p>
+                </article>
+            </section>
+
+
+        </section>
+        <section class="bitcoing-img-container">
+            <h2>Conócelo hoy.</h2>
+        </section>
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+
+            <section class="plans-container--slider">
+                
+
+                <article class="plans-container--card plans-container--card2">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card-price"> <span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card">
+                    <p class="recomendado">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card-price"> <span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card plans-container--card3">
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card-price"> <span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
 
     <footer></footer>
