--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=
     DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/tablet.css" media="(min-width: 930px)">
     <title>Document</title>
 </head>
 <body>
@@ -60,38 +61,34 @@
                     </div>
 
                 </div>
-               
-            </section>
 
-
-            <section class="main-tables-container-2">
-                <div class="main-currency-table-2">
-                    <p class="currency-table--title-2">Comisiones</p>
-                    <div class="currency-table--container-2">
+                <div class="main-currency-table">
+                    <p class="currency-table--title">Monedas</p>
+                    <div class="currency-table--container">
                         <table>
                             <tr>
-                                <td class="table__top-left">Bitrade</td>
-                                <td class="table__top-right table__right">$ 12.96</td>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table__right">$ 1.96 <span class="down"></span> </td>
                             </tr>
 
                             <tr>
-                                <td>Bitpreco</td>
-                                <td class="table__right">$ 13.07</td>
+                                <td>Ethereum</td>
+                                <td class="table__right"> $ 0.07 <span class="up"></span></td>
                             </tr>
 
                             <tr>
-                                <td>Novadax</td>
-                                <td class="table__right">$ 13.15</td>
+                                <td>Ripple</td>
+                                <td class="table__right">$ 2.15 <span class="down"></span></td>
                             </tr>
 
                             <tr>
-                                <td class="table__bottom-left">Coinext</td>
-                                <td class="table__bottom-right table__right">$ 14.96</td>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table__right">$ 4.96 <span class="down"></span></td>
                             </tr>
 
                         </table>
                     </div>
-                    <div class="currency-table--date-2">
+                    <div class="currency-table--date">
                         <p>
                           <b>Actualizado: 19 Julio 23:45 </b>
                         </p>
@@ -100,6 +97,8 @@
                 </div>
                
             </section>
+
+
 
         </section>
 
@@ -189,6 +188,17 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <section class="left">
+            <ul>
+                <li><a href="#">Linkedin</a></li>  
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section class="right">
+            <img src="./assets/img/logo-footer.svg" alt="logo de batatabit 2020">
+        </section>
+    </footer>
 </body>
 </html>
