Desktop responsive and tablet additions

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=
     DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/icons/batata.svg"> 
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/tablet.css" media="(min-width: 930px)">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/desktop.css" media="(min-width: 1440px)">
+    <title>Batatabit</title>
 </head>
 <body>
     <header>
         <img src="/assets/img/logo.svg" alt="Logo Principal">
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
-            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <p class="header-p">Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
             <a href="#plans" class="header--button">Conoce Nuestros Planes <span></span> </a>
         </div>
     </header>
@@ -159,9 +161,9 @@
 
                 <article class="plans-container--card plans-container--card2">
                     <div class="plan-info-container">
-                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <h3 class="plan-card--title">Freel</h3>
                         <p class="plan-card-price"> <span>$</span> 99</p>
-                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <p class="plan-card--saving">*Sin ningun costo en el servicio</p>
                         <button class="plan-card--ca">Escoger este <span></span> </button>
                     </div>
                 </article>
@@ -178,9 +180,9 @@
 
                 <article class="plans-container--card plans-container--card3">
                     <div class="plan-info-container">
-                        <h3 class="plan-card--title">Pago Anual</h3>
-                        <p class="plan-card-price"> <span>$</span> 99</p>
-                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <h3 class="plan-card--title">Pago Mensual</h3>
+                        <p class="plan-card-price"> <span>$</span> 15</p>
+                        <p class="plan-card--saving">*Ahorras $80 comparado al plan mensual.</p>
                         <button class="plan-card--ca">Escoger este <span></span> </button>
                     </div>
                 </article>
@@ -197,7 +199,7 @@
             </ul>
         </section>
         <section class="right">
-            <img src="./assets/img/logo-footer.svg" alt="logo de batatabit 2020">
+            <img src="./assets/img/logo-footer.svg" alt="logo de batatabit 2020" class="logo-fo">
         </section>
     </footer>
 </body>
