--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/img/bitcoinbaby.jpg" alt="Logo Principal">
+        <img src="assets/img/logo.svg" alt="Logo Principal Header">
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p class="header-p">Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
